<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragmentProjects">

    <fragment
        android:id="@+id/fragmentProjects"
        android:name="com.example.todo.screens.FragmentProjects"
        android:label="fragment_projects"
        tools:layout="@layout/fragment_projects" >
        <action
            android:id="@+id/action_fragmentProjects_to_fragmentTasks"
            app:destination="@id/fragmentTasks"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:launchSingleTop="false"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/fragmentTasks"
        android:name="com.example.todo.screens.FragmentTasks"
        android:label="fragment_tasks"
        tools:layout="@layout/fragment_tasks" >
        <action
            android:id="@+id/action_fragmentTasks_to_fragmentTask"
            app:destination="@id/fragmentTask"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/fragmentTask"
        android:name="com.example.todo.screens.FragmentTask"
        android:label="fragment_task"
        tools:layout="@layout/fragment_task" >
        <action
            android:id="@+id/action_fragmentTask_to_fragmentTasks"
            app:destination="@id/fragmentTasks"
            app:popUpTo="@id/fragmentProjects" />
    </fragment>
</navigation>